# DRIVERS/API/generated/swagger/drivers/go-client-generated/model_driver_service_ride_request.go
@@ -1,15 +1,0 @@
-/*
- * drivers.proto
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * API version: version not set
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-package swagger
-
-type DriverServiceRideRequest struct {
-	UserId string `json:"userId,omitempty"`
-	StartLocation *DriverServiceLocation `json:"startLocation,omitempty"`
-	EndLocation *DriverServiceLocation `json:"endLocation,omitempty"`
-}
