# DRIVERS/API/generated/swagger/go-client-generated/model_driver_service_ride.go
@@ -1,0 +1,19 @@
+/*
+ * drivers.proto
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: version not set
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type DriverServiceRide struct {
+	Id            string                 `json:"id,omitempty"`
+	UserId        string                 `json:"userId,omitempty"`
+	DriverId      string                 `json:"driverId,omitempty"`
+	StartLocation *DriverServiceLocation `json:"startLocation,omitempty"`
+	EndLocation   *DriverServiceLocation `json:"endLocation,omitempty"`
+	Status        string                 `json:"status,omitempty"`
+	Timestamp     string                 `json:"timestamp,omitempty"`
+}
