# DRIVERS/API/generated/swagger/go-server-server-generated/main.go
@@ -1,11 +1,3 @@
-/*
- * drivers.proto
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * API version: version not set
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
 package main
 
 import (
@@ -13,24 +5,18 @@ import (
 	"errors"
 	"fmt"
 	pb "github.com/GameXost/YandexGo_proj/DRIVERS/API/generated/drivers"
+	"net"
+
+	sw "github.com/GameXost/YandexGo_proj/DRIVERS/API/generated/swagger/go-server-server-generated/go"
 	"github.com/GameXost/YandexGo_proj/DRIVERS/internal/models"
 	"github.com/jackc/pgx/v5"
 	"github.com/jackc/pgx/v5/pgxpool"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/stats"
 	"google.golang.org/grpc/status"
 	"log"
 	"net/http"
 	"os"
-	// WARNING!
-	// Change this to a fully-qualified import path
-	// once you place this file into your project.
-	// For example,
-	//
-	//    sw "github.com/myname/myrepo/go"
-	//
-	sw "github.com/GameXost/YandexGo_proj/DRIVERS/API/generated/swagger/drivers/go-server-server-generated/go"
 )
 
 type UnimplementedDriversServer struct{}
@@ -40,6 +26,18 @@ type DriverServer struct {
 	db *pgxpool.Pool
 }
 
+func convertDrivertoPB(d *models.Driver) *pb.Driver {
+	return &pb.Driver{
+		Id:        d.ID,
+		Username:  d.UserName,
+		Email:     d.Email,
+		Phone:     d.Phone,
+		CarNumber: d.Car_number,
+		CarModel:  d.Car_model,
+		CarMark:   d.Car_model,
+		CarColor:  d.Car_color,
+	}
+}
 func (s *DriverServer) GetDriverProfile(ctx context.Context, AT *pb.AuthToken) (*pb.Driver, error) {
 	// getDriverID нужно чет сделать,jwt токены или так и оставим хзхз
 	driverID, err := getDriverId(AT.Token)
@@ -48,7 +46,7 @@ func (s *DriverServer) GetDriverProfile(ctx context.Context, AT *pb.AuthToken) (
 	}
 
 	var driver models.Driver
-	query := "SELECT id, first_name, email, phone_number, car_number, car_model, car_marks, car_color FROM drivers WHERE id=$1"
+	query := `SELECT id, first_name, email, phone_number, car_number, car_model, car_marks, car_color FROM drivers WHERE id=$1`
 	err = s.db.QueryRow(ctx, query, driverID).Scan(
 		&driver.ID,
 		&driver.UserName,
@@ -57,32 +55,28 @@ func (s *DriverServer) GetDriverProfile(ctx context.Context, AT *pb.AuthToken) (
 		&driver.Car_number,
 		&driver.Car_model,
 		&driver.Car_marks,
-		&driver.Car_model)
+		&driver.Car_color,
+	)
 	if err != nil {
 		if errors.Is(err, pgx.ErrNoRows) {
 			return nil, status.Error(codes.NotFound, "Driver not found")
 		}
 		return nil, status.Errorf(codes.Internal, "error getting driver profile %v", err)
 	}
-	return &pb.Driver{
-		Id:        driver.ID,
-		Username:  driver.UserName,
-		Email:     driver.Email,
-		Phone:     driver.Phone,
-		CarModel:  driver.Car_model,
-		CarColor:  driver.Car_color,
-		CarMark:   driver.Car_marks,
-		CarNumber: driver.Car_number,
-	}, nil
+	return convertDrivertoPB(&driver), nil
 
 }
-func (s *DriverServer) UpdateDriverProfile(ctx context.Context, UP *pb.UpdateDriverProfileRequest) (*pb.Driver, error) {
-	driverID, err := getDriverId(UP.Id)
+func (s *DriverServer) UpdateDriverProfile(ctx context.Context, req *pb.UpdateDriverProfileRequest) (*pb.Driver, error) {
+	driverID, err := getDriverId(req.Id)
 	if err != nil {
 		return nil, status.Errorf(codes.Unauthenticated, "error getting driver id %v", err)
 	}
-	updated := UP.Driver
-	query := `UPDATE drivers SET first_name=$1, phone_number=$2, email=$3, car_number=$4, 
+	updated := req.Driver
+	err := validateDriver(updated)
+	if err != nil {
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+	query := `UPDATE drivers SET first_name=$1, phone_number=$2, email=$3, car_number=$4,
                    car_model=$5, car_marks=$6, car_color=$7 WHERE id=$8
                    RETURNING id, first_name, email, phone_number, car_number, car_model,car_marks,car_color`
 	var driver models.Driver
@@ -94,20 +88,11 @@ func (s *DriverServer) UpdateDriverProfile(ctx context.Context, UP *pb.UpdateDri
 		updated.CarModel,
 		updated.CarMark,
 		updated.CarColor,
-		driverID).Scan(&driver.UserName, &driver.Phone, &driver.Email, &driver.Car_number, &driver.Car_model, &driver.Car_marks, &driver.Car_color)
+		driverID).Scan(&driverID, &driver.UserName, &driver.Email, &driver.Phone, &driver.Car_number, &driver.Car_model, &driver.Car_marks, &driver.Car_color)
 	if err != nil {
 		return nil, status.Errorf(codes.Internal, "error getting driver %v", err)
 	}
-	return &pb.Driver{
-		Id:        driver.ID,
-		Username:  driver.UserName,
-		Email:     driver.Email,
-		Phone:     driver.Phone,
-		CarNumber: driver.Car_number,
-		CarModel:  driver.Car_model,
-		CarMark:   driver.Car_marks,
-		CarColor:  driver.Car_color,
-	}, nil
+	return convertDrivertoPB(&driver), nil
 }
 func (s *DriverServer) AcceptRide(ctx context.Context, RIR *pb.RideIdRequest) (*pb.StatusResponse, error) {
 
@@ -134,19 +119,23 @@ func (s *DriverServer) GetPassengerInfo(ctx context.Context, UIR *pb.UserIdReque
 
 func main() {
 	log.Printf("Server started")
-	// подключение к БД, работает :)
-	connStr := "host=localhost dbname=postgres ser=postgres password=1234 sslmode=disable"
+	//100 % работает
+	connStr := "postgres://admin:secret@95.163.222.30:5432/Auth?sslmode=disable"
 	dbpool, err := pgxpool.New(context.Background(), connStr)
-
 	if err != nil {
-		fmt.Fprintf(os.Stderr, "Unable to create connection pool: %v\n", err)
-		os.Exit(1)
+		log.Fatalf("Unable to create pool: %v", err)
 	}
-
-	// отложенное закрытие мммм
 	defer dbpool.Close()
+	// 100% работает
 
-	// первый запросик на
+	// проверка подключения к БД
+	err := dbpool.Ping(context.Background())
+	if err != nil {
+		log.Fatalf("Failed to ping database: %v", err)
+	}
+	fmt.Println("Successfully connected to database!")
+
+	// первый запросик в БД
 	query := "select first_name, email, phone_number, car_number, car_marks from drivers"
 	rows, err := dbpool.Query(context.Background(), query)
 	if err != nil {
@@ -159,7 +148,7 @@ func main() {
 		if err != nil {
 			log.Fatalf("Unable to scan row: %v\n", err)
 		}
-		fmt.Println("driver %+v: ", driver)
+		fmt.Println("driver %v\n: ", driver)
 	}
 	if err := rows.Err(); err != nil {
 		log.Fatalf("Iteration error: %v", err)
@@ -167,4 +156,5 @@ func main() {
 
 	router := sw.NewRouter()
 	log.Fatal(http.ListenAndServe(":8080", router))
+
 }
